# Rendering-Project

./: .gitattributes  .gitignore  README.md  Rendering Project.sln
Rendering Project/: Animation.h  CMakeLists.txt  Camera.h  Component.h  Debugging.h  DemoScene.h  EntityComponentSysetm.h  LightStruct.h  Mesh.cpp  Mesh.h  PathConfig.h.in  Rendering Project.vcxproj  Rendering Project.vcxproj.filters  Shader.h  Skybox.h  Texture.h  Utilities.cpp  Utilities.h  WindowContext.cpp  WindowContext.h  exameScene.h  frameBufferObject.cpp  frameBufferObject.h  gl.c  main.cpp  main1.cpp  renderable_object.h  stb_image.h
Rendering Project/3dparty/GLEW/include/GL/: glew.h
Rendering Project/3dparty/GLEW/lib/Release/x64/: glew32.lib
Rendering Project/3dparty/assimp/lib/Debug/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib  assimp-vc143-mt.lib  assimp-vc143-mtd.exp  assimp-vc143-mtd.lib  unit.exp  unit.lib
Rendering Project/3dparty/glad/include/glad/: gl.h
Rendering Project/3dparty/glad/src/: gl.c
Rendering Project/Assets/Golden_Galleon_0418173919_texture_obj/: Golden_Galleon_0418173919_texture.mtl
Rendering Project/Assets/barrel_vino/: wine_barrel_01_4k.mtl  wine_barrel_01_4k.mtl.bak
Rendering Project/Assets/concept_art_shopping_kid/: scene.gltf
Rendering Project/Assets/floating_island_diorama/: license.txt  scene.gltf
Rendering Project/Assets/flying_island_2/: license.txt  scene.gltf
Rendering Project/Assets/rock_wall/: rock_wall_13_1k.gltf
Rendering Project/Assets/spherical_japanese_paper_lantern/: license.txt  scene.gltf
Rendering Project/Assets/star_lantern/: license.txt  scene.gltf
Rendering Project/Assets/the_voyager/: license.txt
Rendering Project/shader/: Geometry_pass.frag  Geometry_pass.vert  Geometry_pass_instanced.vert  Lighting_pass_test.frag  fxaa.frag  instancePhong.vert  lightShader.frag  phong.frag  phong.vert  shader.frag  shadowMap.frag  shadowMap.vert  shadowMapPoint.geom  skyboxShader.vert
